--- a/css/style.css
+++ b/css/style.css
@@ -512,3 +512,230 @@ color: #fff;
 }
 
 /*====================FOOTER=====================*/
+/*====================MODALKA=====================*/
+.backdrop{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(46, 47, 66, 0.4);
+  z-index: 999999;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+
+.is-open{
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.modal{ 
+width: 408px;
+min-height: 584px;
+box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+border-radius: 4px;
+background: #fcfcfc;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50% );
+padding: 72px 24px 24px ;
+}
+
+.close-btn{
+  background-color:  #e7e9fc;
+  line-height: 0;
+  padding: 0;
+  width: 24px;
+  height: 24px;
+  border-radius: 50px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn:hover,
+.close-btn:focus{
+  background-color: #404bbf;
+  fill: #fff;
+}
+
+.modal-p{
+  font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+margin-bottom: 16px;
+}
+
+.div-four-input{
+  margin-bottom: 8px;
+}
+
+.label-four-input{
+  font-family: "Roboto", sans-serif;
+font-weight: 400;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: #8e8f99;
+margin-bottom: 4px;
+display: inline-block;
+}
+
+
+
+.div-four-icon-center{
+  position: relative;
+}
+
+.modal-input{
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 38px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+}
+
+.modal-input:hover,
+.modal-input:focus{
+  outline: transparent;
+  border: 1px solid #4d5ae5;
+  
+}
+
+.modal-input:hover +.modal-icon,
+.modal-input:focus +.modal-icon{
+  fill: #4d5ae5;
+  
+}
+
+.modal-icon{
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.div-four-input-texteria{
+  margin-bottom: 16px;
+}
+
+.modal-textarea{
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+padding-left: 8px 16px;
+resize: none;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+outline: transparent;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: rgba(46, 47, 66, 0.4);
+background-color: transparent;
+}
+
+.modal-textarea::placeholder{
+  font-family: "Roboto", sans-serif;
+font-weight: 400;
+font-size: 12px;
+line-height: 1.16667;
+letter-spacing: 0.04em;
+color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-textarea:hover,
+.modal-textarea:focus{
+  outline: transparent;
+  border: 1px solid #4d5ae5;
+}
+
+.div-four-input-chek{
+margin-bottom: 24px;
+}
+
+.label-four-input-chek{
+font-family: "Roboto", sans-serif;
+font-weight: 400;
+font-size: 12px;
+line-height: 1.16667;
+letter-spacing: 0.04em;
+color: #8e8f99;
+
+
+}
+
+.span-chek{
+  width: 16px;
+  height: 16px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+ fill: transparent;
+}
+
+.svg-privat{}
+
+.privacy-policy-link{
+  line-height: 1.33333;
+text-decoration: underline;
+text-decoration-skip-ink: none;
+color: #4d5ae5;
+}
+
+.modal-input-chek:checked+.label-four-input-chek .span-chek{
+background-color: #404bbf;
+fill: #fff;
+
+}
+
+.modal-input-chek:hover+.label-four-input-chek .span-chek,
+.modal-input-chek:focus+.label-four-input-chek .span-chek{
+  border: 1px solid rgba(5, 17, 243, 0.4);
+}
+
+.send-btn{
+
+margin-left: auto;
+margin-right: auto;
+display: block;
+
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+text-align: center;
+color: #fff;
+
+box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+background: #4d5ae5;
+
+border-radius: 4px;
+padding: 16px 32px;
+width: 169px;
+height: 56px;
+}
+
+/*====================MODALKA=====================*/
