--- a/css/style.css
+++ b/css/style.css
@@ -571,6 +571,7 @@ letter-spacing: 0.04em;
   height: 40px;
 
   background: #4d5ae5;
+  background-color: transparent;
 
   display: flex;
   justify-content: center;
@@ -633,10 +634,12 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: absolute;
   top: 24px;
   right: 24px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
+.icon-btb-close{
+  fill: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .close-btn:hover,
 .close-btn:focus{
