--- a/css/style.css
+++ b/css/style.css
@@ -511,11 +511,11 @@ color: #fff;
   background-color: #31d0aa;
 }
 
-.input-footer{
+.div-footer-form{
   margin-left: 80px;
 }
 
-.peska-footer{
+.footer-form-p{
   font-family: "Roboto", sans-serif;
 font-weight: 500;
 font-size: 16px;
@@ -525,14 +525,14 @@ color: #fff;
 margin-bottom: 16px;
 }
 
-.footer-foorm-flex{
+.footer-form{
   display: flex;
   gap: 24px;
 }
 
-.footer-input{
+.footer-form-input{
   border: 1px solid #fff;
-  background-color: transparent;
+  background-color: transparent; 
   color: #ffffff;
 border-radius: 4px;
 width: 264px;
@@ -540,13 +540,12 @@ height: 40px;
 background: #2e2f42;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 padding-left: 16px;
-
 font-size: 12px;
 line-height: 2;
 letter-spacing: 0.04em;
 }
 
-.footer-input::placeholder{
+.footer-form-input::placeholder{
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
@@ -555,7 +554,7 @@ letter-spacing: 0.04em;
   color: #fff;
 }
 
-.btb-footer-input{
+.footer-form-btn{
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -570,15 +569,15 @@ letter-spacing: 0.04em;
   min-width: 165px;
   height: 40px;
 
-  background: #4d5ae5;
-  background-color: transparent;
+  background-color: #4D5AE5;
+ 
 
   display: flex;
   justify-content: center;
   align-items: center;
   
 }
-.svg-footer-input{
+.svg-btn-footer{
   margin-left: 16px;
 }
 
@@ -638,7 +637,8 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-btb-close{
-  fill: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-btn:hover,
