--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
 /*===================SKIDKA====================*/
-h1,h2,h3,h4,h5,h6,p{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   margin-top: 0;
   margin-bottom: 0;
-  margin-left:0;
+  margin-left: 0;
 }
 
 ul,
@@ -17,10 +23,9 @@ a {
   text-decoration: none;
 }
 
-img{
+img {
   display: block;
   max-width: 100%;
-
 }
 
 button {
@@ -49,27 +54,27 @@ body {
   background-color: #ffffff;
 }
 
-.container{
+.container {
   width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  
 }
 /*===================ZAGALNI===================*/
 
 /*====================HEADER=====================*/
-.page-header{
+.page-header {
   border-bottom: 1px solid #e7e9fc;
-  box-shadow:  0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
-.conteyner-lite-header{
+.conteyner-lite-header {
   display: flex;
   justify-content: space-between;
 }
 
-.header-nav{
+.header-nav {
   display: flex;
   align-items: center;
 }
@@ -91,11 +96,11 @@ body {
   color: #2e2f42;
 }
 
-.header-list-nav{
+.header-list-nav {
   display: flex;
   column-gap: 40px;
 }
- 
+
 .header-link-nav {
   font-weight: 500;
   font-size: 16px;
@@ -106,15 +111,14 @@ body {
   padding-top: 24px;
   padding-bottom: 24px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
 }
 
-.psevdo{
+.psevdo {
   position: relative;
 }
 
-.psevdo::after{
-  content:"";
+.psevdo::after {
+  content: "";
   border-radius: 2px;
   width: 48px;
   height: 4px;
@@ -123,21 +127,18 @@ body {
   position: absolute;
   left: 0;
   bottom: -1px;
-  
-  
 }
 
 .header-link-nav:hover,
-.header-link-nav:focus{
-    color: #404bbf
+.header-link-nav:focus {
+  color: #404bbf;
 }
 
 .header-address {
   font-style: normal;
-  
 }
 
-.header-list-address{
+.header-list-address {
   display: flex;
   column-gap: 40px;
 }
@@ -151,12 +152,12 @@ body {
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link-address:hover,
-.header-link-address:focus{
-    color: #404bbf;
+.header-link-address:focus {
+  color: #404bbf;
 }
 /*====================HEADER=====================*/
 /*====================HERO=====================*/
@@ -165,12 +166,15 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-top: 188px;
   padding-bottom: 188px;
   max-width: 1440px;
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/Section-HERO/people-office.jpg);
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/Section-HERO/people-office.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size:cover;
+  background-size: cover;
   margin: 0 auto;
-  
 }
 
 .hero-h-one {
@@ -185,7 +189,6 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-bottom: 48px;
   margin-left: auto;
   margin-right: auto;
-
 }
 
 .hero-button {
@@ -207,7 +210,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   min-width: 169px;
   height: 56px;
   margin: 0 auto;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -218,34 +221,33 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /*====================HERO=====================*/
 
 /*====================SECTION-2=====================*/
-.info{
+.info {
   padding-top: 120px;
   padding-bottom: 120px;
 }
 
-.info-list{
+.info-list {
   display: flex;
   column-gap: 24px;
 }
 
-.info-li{
+.info-li {
   width: calc((100% - 72px) / 4);
 }
 
-.info-div{
+.info-div {
   width: 264px;
   height: 112px;
   background: #f4f4fd;
   border: 1px solid #8e8f99;
-border-radius: 4px;
-display: flex;
-justify-content: center;
-align-items: center;
-margin-bottom: 8px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
 }
 
-.info-svg{
-
+.info-svg {
 }
 
 .info-h-tree {
@@ -284,7 +286,7 @@ margin-bottom: 8px;
   margin-bottom: 72px;
 }
 
-.team-list{
+.team-list {
   display: flex;
   gap: 24px;
 }
@@ -293,10 +295,11 @@ margin-bottom: 8px;
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.team-div{
+.team-div {
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -309,7 +312,6 @@ margin-bottom: 8px;
   text-align: center;
   color: #2e2f42;
   margin-bottom: 8px;
-  
 }
 
 .team-p {
@@ -319,25 +321,22 @@ margin-bottom: 8px;
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
-  
 }
 
-.team-socseti-ul{
+.team-socseti-ul {
   display: flex;
   justify-content: center;
   gap: 24px;
-  
 }
 
-.team-socseti-li{
-
+.team-socseti-li {
 }
 
-.team-socseti-a{
+.team-socseti-a {
   background-color: #4d5ae5;
-  width:40px;
-  height:40px; 
-  
+  width: 40px;
+  height: 40px;
+
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -346,19 +345,18 @@ margin-bottom: 8px;
 }
 
 .team-socseti-a:hover,
-.team-socseti-a:focus{
+.team-socseti-a:focus {
   background-color: #404bbf;
 }
 
-.team-svg{
+.team-svg {
   fill: #f4f4fd;
 }
-
 
 /*====================SECTION-3=====================*/
 
 /*====================SECTION-4=====================*/
-.portfolio{
+.portfolio {
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -374,51 +372,50 @@ margin-bottom: 8px;
   margin-bottom: 72px;
 }
 
-.portfolio-list{
+.portfolio-list {
   display: flex;
   flex-wrap: wrap;
   row-gap: 48px;
   column-gap: 24px;
 }
 
-.portfolio-li{
+.portfolio-li {
   width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.overley-div{
+.overley-div {
   position: relative;
   overflow: hidden;
 }
 
-.portfolio-li:hover .overley{
+.portfolio-li:hover .overley {
   transform: translateY(0);
-
 }
 
-.portfolio-li:hover{
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+.portfolio-li:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.overley{
-  
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #f4f4fd;
-background-color: #4d5ae5;
-width: 100%;
-height: 100%;
-padding: 40px 32px;
-position: absolute;
-top: 0;
-transform: translateY(100%);
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.overley {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px;
+  position: absolute;
+  top: 0;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-div{
-padding: 32px 16px;
+.portfolio-div {
+  padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
 }
@@ -430,7 +427,6 @@ padding: 32px 16px;
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
-  
 }
 
 .portfolio-p {
@@ -439,7 +435,6 @@ padding: 32px 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  
 }
 
 /*====================SECTION-4=====================*/
@@ -451,14 +446,14 @@ padding: 32px 16px;
   padding-bottom: 100px;
 }
 
-.flex-page{
+.flex-page {
   display: flex;
   align-items: baseline;
- }
+}
 
- .div-logo{
+.div-logo {
   margin-right: 120px;
- }
+}
 
 .footer-logo {
   font-family: "Raleway", sans-serif;
@@ -485,67 +480,64 @@ padding: 32px 16px;
   max-width: 264px;
 }
 
-
-
-.footer-socseti-p{
-margin-bottom: 16px;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #fff;
+.footer-socseti-p {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
 }
 
-.footer-socseti-ul{
+.footer-socseti-ul {
   display: flex;
   gap: 16px;
-
 }
 
-.footer-socseti-a{
+.footer-socseti-a {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-socseti-a:hover,
-.footer-socseti-a:focus{
+.footer-socseti-a:focus {
   background-color: #31d0aa;
 }
 
-.div-footer-form{
+.div-footer-form {
   margin-left: 80px;
 }
 
-.footer-form-p{
+.footer-form-p {
   font-family: "Roboto", sans-serif;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #fff;
-margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
 }
 
-.footer-form{
+.footer-form {
   display: flex;
   gap: 24px;
 }
 
-.footer-form-input{
+.footer-form-input {
   border: 1px solid #fff;
-  background-color: transparent; 
+  background-color: transparent;
   color: #ffffff;
-border-radius: 4px;
-width: 264px;
-height: 40px;
-background: #2e2f42;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-padding-left: 16px;
-font-size: 12px;
-line-height: 2;
-letter-spacing: 0.04em;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  padding-left: 16px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
 }
 
-.footer-form-input::placeholder{
+.footer-form-input::placeholder {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
@@ -554,7 +546,7 @@ letter-spacing: 0.04em;
   color: #fff;
 }
 
-.footer-form-btn{
+.footer-form-btn {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -569,21 +561,19 @@ letter-spacing: 0.04em;
   min-width: 165px;
   height: 40px;
 
-  background-color: #4D5AE5;
- 
+  background-color: #4d5ae5;
 
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
-.svg-btn-footer{
+.svg-btn-footer {
   margin-left: 16px;
 }
 
 /*====================FOOTER=====================*/
 /*====================MODALKA=====================*/
-.backdrop{
+.backdrop {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -591,36 +581,37 @@ letter-spacing: 0.04em;
   left: 0;
   background-color: rgba(46, 47, 66, 0.4);
   z-index: 999999;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
 }
 
-
-.is-open{
+.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
 }
 
-.modal{ 
-width: 408px;
-min-height: 584px;
-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-border-radius: 4px;
-background: #fcfcfc;
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%,-50% );
-padding: 72px 24px 24px ;
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.modal {
+  width: 408px;
+  min-height: 584px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  background: #fcfcfc;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 72px 24px 24px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close-btn{
-  background-color:  #e7e9fc;
+.close-btn {
+  background-color: #e7e9fc;
   line-height: 0;
   padding: 0;
   width: 24px;
@@ -633,54 +624,52 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: absolute;
   top: 24px;
   right: 24px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-btb-close{
-
+.icon-btb-close {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-btn:hover,
-.close-btn:focus{
+.close-btn:focus {
   background-color: #404bbf;
   border: none;
   fill: #fff;
 }
 
-.modal-p{
+.modal-p {
   font-family: "Roboto", sans-serif;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-text-align: center;
-color: #2e2f42;
-margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 16px;
 }
 
-.div-four-input{
+.div-four-input {
   margin-bottom: 8px;
 }
 
-.label-four-input{
+.label-four-input {
   font-family: "Roboto", sans-serif;
-font-weight: 400;
-font-size: 12px;
-line-height: 1.17;
-letter-spacing: 0.04em;
-color: #8e8f99;
-margin-bottom: 4px;
-display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  margin-bottom: 4px;
+  display: block;
 }
 
-
-
-.div-four-icon-center{
+.div-four-icon-center {
   position: relative;
 }
 
-.modal-input{
+.modal-input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -692,23 +681,20 @@ display: block;
   outline: transparent;
   background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
 }
 
 .modal-input:hover,
-.modal-input:focus{
+.modal-input:focus {
   outline: transparent;
   border: 1px solid #4d5ae5;
-  
 }
 
-.modal-input:hover +.modal-icon,
-.modal-input:focus +.modal-icon{
+.modal-input:hover + .modal-icon,
+.modal-input:focus + .modal-icon {
   fill: #4d5ae5;
-  
 }
 
-.modal-icon{
+.modal-icon {
   position: absolute;
   top: 50%;
   left: 16px;
@@ -717,58 +703,56 @@ display: block;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.div-four-input-texteria{
+.div-four-input-texteria {
   margin-bottom: 16px;
 }
 
-.modal-textarea{
+.modal-textarea {
   width: 100%;
   height: 120px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-border-radius: 4px;
+  border-radius: 4px;
 
-padding: 8px 16px;
-resize: none;
-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-outline: transparent;
-font-size: 12px;
-line-height: 1.17;
-letter-spacing: 0.04em;
-color: rgba(46, 47, 66, 0.4);
-background-color: transparent;
+  padding: 8px 16px;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
 }
 
-.modal-textarea::placeholder{
+.modal-textarea::placeholder {
   font-family: "Roboto", sans-serif;
-font-weight: 400;
-font-size: 12px;
-line-height: 1.16667;
-letter-spacing: 0.04em;
-color: rgba(46, 47, 66, 0.4);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
 }
 
 .modal-textarea:hover,
-.modal-textarea:focus{
+.modal-textarea:focus {
   outline: transparent;
   border: 1px solid #4d5ae5;
 }
 
-.div-four-input-chek{
-margin-bottom: 24px;
+.div-four-input-chek {
+  margin-bottom: 24px;
 }
 
-.label-four-input-chek{
-font-family: "Roboto", sans-serif;
-font-weight: 400;
-font-size: 12px;
-line-height: 1.17;
-letter-spacing: 0.04em;
-color: #8e8f99;
-
-
+.label-four-input-chek {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
 }
 
-.span-chek{
+.span-chek {
   width: 16px;
   height: 16px;
   display: inline-flex;
@@ -776,48 +760,49 @@ color: #8e8f99;
   align-items: center;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
- fill: transparent;
- transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.svg-privat{}
+.svg-privat {
+}
 
-.privacy-policy-link{
+.privacy-policy-link {
   line-height: 1.33333;
-text-decoration: underline;
-text-decoration-skip-ink: none;
-color: #4d5ae5;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
 }
 
-.modal-input-chek:checked+.label-four-input-chek .span-chek{
-background-color: #404bbf;
-border: none;
-fill: #F4F4FD;
+.modal-input-chek:checked + .label-four-input-chek .span-chek {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
 }
 
+.send-btn {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
 
-.send-btn{
-margin-left: auto;
-margin-right: auto;
-display: block;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
 
-font-family: "Roboto", sans-serif;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.04em;
-text-align: center;
-color: #fff;
-
-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-background: #4d5ae5;
-
-border-radius: 4px;
-padding: 16px 32px;
-min-width: 169px;
-height: 56px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*====================MODALKA=====================*/
